--- a/css/navbar.css
+++ b/css/navbar.css
@@ -63,7 +63,9 @@
   right: 0;
   transition: 1s;
   z-index: 999;
+  filter: drop-shadow( 1px 3px 1px rgba(0, 0, 0, .25));
 }
+
 
 @media screen and (min-width: 660px) {
   .nav li {
