--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -347,13 +347,14 @@ input[type="url"],
 input[type="password"],
 textarea,
 select {
-  height: 38px;
+  height: 34px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #fff;
   border: 1px solid #d1d1d1;
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box;
+  width: 100%;
 }
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
