--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -253,7 +253,7 @@ h6 {
     font-size: 3rem;
   }
   h5 {
-    font-size: 2.4rem;
+    font-size: 2.1rem;
   }
   h6 {
     font-size: 1.5rem;
@@ -409,21 +409,21 @@ label > .label-body {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-  list-style: circle inside;
+  list-style: disc inside;
 }
 ol {
   list-style: decimal inside;
 }
 ol,
 ul {
-  padding-left: 0;
+  padding-left: 15px;
   margin-top: 0;
 }
 ul ul,
 ul ol,
 ol ol,
 ol ul {
-  margin: 1.5rem 0 1.5rem 3rem;
+  margin: -0.5rem 0 1.5rem 3rem;
   font-size: 90%;
 }
 li {
